Fix logo centering on mobile

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -5,7 +5,6 @@ header[role=banner] {
 
   a {
     color: white;
-    margin-right: 1em;
   }
 
   h1 {
@@ -48,6 +47,9 @@ header[role=banner] {
   header[role=banner] {
     padding: 25pt 50pt;
 
+    a {
+      margin-right: 1em;
+    }
 
     h1,
     form[role=search] {
