--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -95,16 +95,3 @@
   } /* .h-entry */
 
 } /* #home */
-
-
-@media (min-width: 768px) {
-}
-
-@media (min-width: 800px) {
-}
-
-@media (min-width: 992px) {
-}
-
-@media (min-width: 1200px) {
-}
